LOGFILE generated automatically by ubuntu install was incorrect: should be /var/log/syslog now

--- a/shorewall/templates/shorewall_default_shorewall.conf.j2
+++ b/shorewall/templates/shorewall_default_shorewall.conf.j2
@@ -63,7 +63,7 @@ LOG_VERBOSITY={{shorewall_log_verbosity}}
 
 LOGALLNEW=
 
-LOGFILE=/var/log/messages
+LOGFILE=/var/log/syslog
 
 LOGFORMAT="Shorewall:%s:%s:"
 
